--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 PORT=3000
-SOURCE_CONFIG_URL=
-META_DATA_MAPPING=
+POSTGRES_HOST=
+POSTGRES_USERNAME=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
+POSTGRES_PORT=5432
