--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "http-status": "^1.7.3",
     "keyv": "^4.5.4",
     "lodash": "^4.17.21",
-    "morgan": "^1.10.0",
     "node-cache": "^5.1.2",
     "pg": "^8.11.3",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
